Changes in Release 2.1.1
=============================================
[SIDP-249] - PreviousSession INFO message printed as ERROR message
[SIDP-250] - AuthenticationEngine::returnToAuthenticationEngine() static method called before servlet init() when clustered.
[SIDP-252] - IdPSessionFilter throws ArrayIndexOutOfBoundsException on validation of unexpected cookie

Changes in Release 2.1.0
=============================================
[SIDP-20] - Cannot deploy on Windows. Spring and DOS device names?
[SIDP-164] - Option to make session cookie secure
[SIDP-165] - Support for SessionNotOnOrAfter
[SIDP-167] - Missing tags and incomplete login.jsp
[SIDP-170] - Attribute Filter refresh won't work with "resource:FileBackedHttpResource"
[SIDP-171] - Cannot deploy to directories in spaces in the names
[SIDP-172] - AACLI.BAT should check whether IDP_HOME is defined before testing whether it exists
[SIDP-175] - Security role name missing in web.xml
[SIDP-176] - useKeyTab should be set to true
[SIDP-181] - Released Attributes not logged when using SAML2
[SIDP-183] - make IdP session available to logging system
[SIDP-185] - NullPointerException after AttributeQuery when Security Rule fails
[SIDP-189] - NPE in AbstractSAML2ProfileHandler
[SIDP-194] - Installer can remember the wrong thing
[SIDP-196] - IdP continues to use old principal name after forced reauthentication
[SIDP-197] - Misleading error message for ValidationInfo element in relying-party.xml
[SIDP-199] - loss of login context when deploying the IdP to tomcat's ROOT context
[SIDP-201] - IdP sends SAML 1 authentication responses without audience conditions
[SIDP-202] - Saml2LoginContext unable to deserialize serialized AuthnRequest
[SIDP-203] - Insufficient information logged to track down errant users
[SIDP-206] - SessionManagerEntry's back reference to the SessionManager object interferes with clustering
[SIDP-209] - Enforce SAML 2 metadata SPSSODescriptor/@AuthnRequestsSigned